# python-random-logger

./: README.md  pyproject.toml
src/: pyrandlog.py
